[gd_scene load_steps=3 format=3 uid="uid://bv7k04jyw163m"]

[ext_resource type="Script" uid="uid://bdpolfim6tmt6" path="res://Views/main_menu.gd" id="1_7s1d8"]
[ext_resource type="Texture2D" uid="uid://bhud4mgusa5uq" path="res://Assets/Textures/Sky/8k_stars_milky_way.jpg" id="1_i7pk0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7s1d8")
game_scene_path = "uid://372cwiqlmyrk"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i7pk0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Start Game"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 30
text = "Avaruuspeli
-
The Redemption"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 146.0
offset_top = 279.0
offset_right = 186.0
offset_bottom = 297.0

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
